...
    func addRightNavButtons() {
        // add weather nav button
        var addImage: UIImage?
        var foreCastImage: UIImage?
        if #available(iOS 13.0, *) {
            addImage = UIImage(systemName: "plus.circle")
            foreCastImage = UIImage(systemName: "thermometer")
        } else {
            // Fallback on earlier versions
            addImage = UIImage(named: "add")
            foreCastImage = UIImage(named: "forecast")
        }
        
        let _navAddButton = UIBarButtonItem(image: addImage, style: .plain, target: self, action: #selector(self.addButtonAction))

        let _navForecastButton = UIBarButtonItem(image: foreCastImage, style: .plain, target: self, action: #selector(self.forecastButtonAction))
        
...
