...
        }
    }
    
    /// Navigation bar custome back button
    var navCloseButton : UIBarButtonItem  {
        let _navBackButton   = UIButton()
        _navBackButton.setImage(UIImage(named: "navClose"), for: .normal)
        _navBackButton.setImage(UIImage(named: "navClose"), for: .highlighted)
        _navBackButton.setImage(UIImage(named: "navClose"), for: .selected)
        _navBackButton.imageView?.contentMode = .scaleAspectFit
        _navBackButton.contentHorizontalAlignment = .left
        _navBackButton.frame = CGRect(x: 0, y: 0, width: 60, height: 50)
        _navBackButton.imageEdgeInsets = UIEdgeInsets.zero
...
