...
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WeatherCellView" customModule="Weather" customModuleProvider="target">
            <connections>
                <outlet property="cityNameLabel" destination="bI8-n4-Bwr" id="gzt-TQ-WVc"/>
                <outlet property="descLabel" destination="Jl8-Vx-Uux" id="AZQ-dL-mBQ"/>
                <outlet property="maxTempLabel" destination="Owp-Up-Vwh" id="tW4-y0-YzH"/>
                <outlet property="minTempLabel" destination="RkO-Nh-zhU" id="UQa-I8-t4t"/>
                <outlet property="tempLabel" destination="LZZ-hL-1C4" id="O5u-2w-pCP"/>
...
